--- a/HOME.html
+++ b/HOME.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Crowdfunding Platform</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Crowdfunding Platform</h1>
+    </header>
+    <main>
+        <section id="project-list">
+            <!-- Project Cards will be dynamically generated here -->
+        </section>
+        <section id="create-project">
+            <h2>Create a Project</h2>
+            <form id="project-form">
+                <label for="project-title">Project Title:</label>
+                <input type="text" id="project-title" required>
+                <label for="project-description">Project Description:</label>
+                <textarea id="project-description" rows="4" required></textarea>
+                <label for="project-goal">Funding Goal:</label>
+                <input type="number" id="project-goal" required>
+                <button type="submit">Create Project</button>
+            </form>
+        </section>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
